--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Shadows+Into+Light&display=swap');
 
 :root {
     --font-color: #2d3e38;
@@ -28,7 +29,7 @@ body{
 }
 
 h1{
-    font-family: logo-font;
+    font-family: 'Shadows Into Light', sans-serif;
     background-color: #76ab9899;
     color: white;
     text-align: center;
@@ -40,6 +41,7 @@ h1{
 
 #icon{
     height: 80px;
+    padding-top: 15px;
 }
 
 .photo-credit{
@@ -68,6 +70,18 @@ a{
 #right{
     width: 60%;
     float: left;
+}
+
+#password-alert.hide{
+    color: rgb(255, 255, 255);
+    font-size: x-small;
+    font-weight: 600;
+}
+
+#password-alert.alert{
+    color: red;
+    font-size: x-small;
+    font-weight: 600;
 }
 
 
@@ -108,6 +122,13 @@ button {
     padding-top: 30px;
     padding-bottom: 0vmax;
 
+}
+
+
+
+#password.show, #conf-password.show {
+    border: solid 2px red;
+    border-radius: 6px;
 }
 
 .form-section {
